# flopper

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.MD  FEATURE_REQUEST.md
.github/workflows/: ci.yaml  python-publish.yml
flopper/: __init__.py  custom_ops.py  flopper.py
flopper/operations/: __init__.py  common.py  elem_wise.py  linalg.py  zero_flops.py
tests/: conftest.py  test_api.py
