[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.34.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flopper"
description = "A Python to count flops of pytorch models."
readme = "README.md"
authors = [
    { name = "Andrea Boscolo Camiletto", email = "abcamiletto@gmail.com" },
]
dependencies = ["fvcore>=0.1.5", "torch>=1.8"]
requires-python = ">=3.8"
version = "0.2.1"

[project.urls]
Homepage = "https://github.com/abcamiletto/flopper"
Repository = "https://github.com/abcamiletto/flopper"

[project.optional-dependencies]
dev = ["black", "pre-commit", "pytest"]

[tool.setuptools.packages.find]
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"] # exclude imports from __init__.py
